<resources>
    <string name="app_name">ITE Online Shop</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="search">Search Products</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00">$10.00</string>
    <string name="profile_">Profile</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="image">image</string>
    <string name="full_name">Full Name</string>
    <string name="edit">edit</string>
    <string name="email_abc_com">email@abc.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_0000_0000_0000">0000 0000 0000</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="booking">Booking</string>
    <string name="products">Products</string>
</resources>